# reyearn

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
api/: handlers.py
dags/: importer.py  trainer.py
data/import/email/: README.md
data/import/email/email.business/: .test
data/import/email/email.personal/: .test
db/: __init__.py  alembic.ini  client.py  repo.py  schemas.py
db/migrations/: env.py
db/migrations/versions/: 7520bed9da33_add_type_enum.py  7520bed9da33_adds_enums_class_anno.py  a16ca4c20de8_hooks_up_annotations.py  a549dc807c34_adds_experiments_and_models.py  c5e6204a5d44_create_initial_tables.py  c5e6204a5d44_creates_initial_tables.py
docs/: vision.md
pipelines/: importer.py
tests/: test_api.py
