[tool.poetry]
name = "reyearn"
version = "0.1.0"
description = "Run live ML experiments."
authors = ["Chris Hart <chrstphrhrt@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
prefect = {extras = ["viz"], version = "^0.10.0"}
sqlalchemy = "^1.3.15"
sqlalchemy-utils = "^0.36.3"
databases = {extras = ["postgresql"], version = "^0.2.6"}
uvicorn = "^0.11.3"
requests = "^2.23.0"
fastapi = "^0.53.2"
scikit-learn = "^0.22.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
alembic = "^1.4.2"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
